--- a/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
+++ b/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
@@ -166,7 +166,7 @@ html body {
 	transition: height 0.6s;
 }
 
-.header-links-container .classes {
+.header-links-container .tarifs {
   -webkit-transition: height 0.8s; /* Safari */
     -moz-transition: height 0.8s;
     -o-transition: height 0.8s;
@@ -240,7 +240,7 @@ html body {
     color: rgb(245,245,245) !important;
 }
 
-.header-links-container:hover .classes a {
+.header-links-container:hover .tarifs a {
     -webkit-transition: color 1.2s 0.2s ease-in-out;
     -moz-transition: color 1.2s 0.2s ease-in-out;
     -o-transition: color 1.2s 0.2s ease-in-out;
@@ -389,36 +389,16 @@ html body {
 	border: 1px solid transparent;
 	margin: 110px 15px 0 0;
 	padding: 5px 0px 5px 25px;
-	/*border-radius: 10px;*/
 	color: rgb(235,235,235);
 	font-size: 22px;
 	font-weight: bold;
 	cursor: pointer;
 	transition: all 0.5s;
-	/*border: 1px solid grey;
-	width: 160px;
-	float: left;
-	padding: 15px;
-	margin-right: 15px;*/
 }
 
 .btn-blue {
-	/*background-color: #0B1C5C;*/
 	background-color: black;
-	/*box-shadow: 4px 4px #04113F;*/
 }
-
-/*				EXCHANGING IT FOR BUTTON THAT MATCHES HEADER
-.btn-blue {
-	background-color: #0B1C5C;
-	box-shadow: 4px 4px #04113F;
-}*/
-
-/*.btn-grey {							/* TAKEN OUT AS ITS NOT LONGER RELEVANT
-	background-color: #3F424F;	
-	box-shadow: 4px 4px #272C3E;
-	width: 200px;
-}*/
 
 .btn:hover {
 	background-color: #0B1C5C;
@@ -447,6 +427,7 @@ html body {
 	opacity: 1;
 	right: -16px;
 }
+
 
 /* END HERO CODE
 ===================				EDITED OUT 26/09
@@ -523,9 +504,353 @@ START OF CONTENT PAGES */
 
 }
 
-#a-propos, #classes, #blog {
+#a-propos, #tarifs, #blog, #btn-blue {
 	z-index: 6;
 }
+
+#btn-blue {
+	z-index: -5;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+
+.btn-fake-blue-div {
+	position: absolute;
+	top: 32.84em;
+	left: 38%;
+	width: 0.8em;
+	opacity: 0;
+	height: 64px;
+	padding: 0 0 0 0;
+	margin-bottom: -30px;
+	overflow: hidden;
+}
+
+.btn-fake-blue-div .container {
+ 	background-color: #0B1C5C;
+ 	height: 100%;
+ 	width: 100%;
+ 	margin: 0 auto;
+ }
+
+ #btn-blue-h1 {
+ 	position: absolute;                  /*removing this, YOU CANNOT RUN THE MARGIN-TOP  BELOW*/
+ 	font-size: 1px;
+ 	color: white;
+ 	font-weight: bold;
+ 	display: block;   				
+ 	/*margin: 0px 0 30px;*/
+ 	padding-top: 45px;
+ 	left: -200px;
+ 	margin-top: 15px;
+ 	margin-left: 0;				
+ 	margin-right: auto;
+ 	width: 850px;
+ 	opacity: 0;
+ 	text-align: left;
+ 	
+ }
+
+ .btn-blue-p {
+ 	position: relative;
+ 	width: 100%;
+ 	height: 100%;
+ 	/*border: 1px solid red;*/
+ }
+
+/*CAROUSEL START*/
+
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.glyphicon-chevron-left:before {
+  content: "\e079";
+}
+.glyphicon-chevron-right:before {
+  content: "\e080";
+}
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.carousel {
+  position: relative;
+}
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.carousel-inner > .item {
+  position: relative;
+  display: none;
+  -webkit-transition: .6s ease-in-out left;
+       -o-transition: .6s ease-in-out left;
+          transition: .6s ease-in-out left;
+}
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  line-height: 1;
+}
+@media all and (transform-3d), (-webkit-transform-3d) {
+  .carousel-inner > .item {
+    -webkit-transition: -webkit-transform .6s ease-in-out;
+         -o-transition:      -o-transform .6s ease-in-out;
+            transition:         transform .6s ease-in-out;
+
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-perspective: 1000px;
+            perspective: 1000px;
+  }
+  .carousel-inner > .item.next,
+  .carousel-inner > .item.active.right {
+    left: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  .carousel-inner > .item.prev,
+  .carousel-inner > .item.active.left {
+    left: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+  .carousel-inner > .item.next.left,
+  .carousel-inner > .item.prev.right,
+  .carousel-inner > .item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+}
+.carousel-inner > .active,
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  display: block;
+}
+.carousel-inner > .active {
+  left: 0;
+}
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.carousel-inner > .next {
+  left: 100%;
+}
+.carousel-inner > .prev {
+  left: -100%;
+}
+.carousel-inner > .next.left,
+.carousel-inner > .prev.right {
+  left: 0;
+}
+.carousel-inner > .active.left {
+  left: -100%;
+}
+.carousel-inner > .active.right {
+  left: 100%;
+}
+.carousel-control {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 15%;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0);
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+.carousel-control.left {
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
+  background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
+  background-image:         linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
+  background-repeat: repeat-x;
+}
+.carousel-control.right {
+  right: 0;
+  left: auto;
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
+  background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .0001)), to(rgba(0, 0, 0, .5)));
+  background-image:         linear-gradient(to right, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+  background-repeat: repeat-x;
+}
+.carousel-control:hover,
+.carousel-control:focus {
+  color: #fff;
+  text-decoration: none;
+  filter: alpha(opacity=90);
+  outline: 0;
+  opacity: .9;
+}
+.carousel-control .icon-prev,
+.carousel-control .icon-next,
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .glyphicon-chevron-right {
+  position: absolute;
+  top: 50%;
+  z-index: 5;
+  display: inline-block;
+  margin-top: -10px;
+}
+.carousel-control .icon-prev,
+.carousel-control .glyphicon-chevron-left {
+  left: 50%;
+  margin-left: -10px;
+}
+.carousel-control .icon-next,
+.carousel-control .glyphicon-chevron-right {
+  right: 50%;
+  margin-right: -10px;
+}
+.carousel-control .icon-prev,
+.carousel-control .icon-next {
+  width: 20px;
+  height: 20px;
+  font-family: serif;
+  line-height: 1;
+}
+.carousel-control .icon-prev:before {
+  content: '\2039';
+}
+.carousel-control .icon-next:before {
+  content: '\203a';
+}
+.carousel-indicators {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  z-index: 15;
+  width: 60%;
+  padding-left: 0;
+  margin-left: -30%;
+  text-align: center;
+  list-style: none;
+}
+.carousel-indicators li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 1px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #000 \9;
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid #fff;
+  border-radius: 10px;
+}
+.carousel-indicators .active {
+  width: 12px;
+  height: 12px;
+  margin: 0;
+  background-color: #fff;
+}
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+}
+.carousel-caption .btn {
+  text-shadow: none;
+}
+@media screen and (min-width: 768px) {
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-prev,
+  .carousel-control .icon-next {
+    width: 30px;
+    height: 30px;
+    margin-top: -10px;
+    font-size: 30px;
+  }
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .icon-prev {
+    margin-left: -10px;
+  }
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-next {
+    margin-right: -10px;
+  }
+  .carousel-caption {
+    right: 20%;
+    left: 20%;
+    padding-bottom: 30px;
+  }
+  .carousel-indicators {
+    bottom: 20px;
+  }
+}
+
+ .carousel-inner img {
+     -webkit-filter: grayscale(90%);
+     filter: grayscale(90%); /* make all photos black and white */ 
+     width: 100%; /* Set width to 100% */
+     margin: auto;
+     /*margin-top: 55px;*/
+  }
+
+ .carousel-caption {
+ 	color: white;
+ 	font-size: 1.4em;
+ }
+
+ .carousel-caption h3 {
+     color: white !important;
+     font-size: 0.8em;
+ }
+
+ .carousel-indicators li {
+ 	background-color: white;
+ }
+
+ .carousel-indicators .active {
+ 	background-color: grey;
+ }
+
+ @media (max-width: 600px) {
+     .carousel-caption {
+         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+     }
+ }
+/*Carousel END*/
+
+
+
+
 
 .a-propos-div {
 	position: absolute;
@@ -569,7 +894,7 @@ START OF CONTENT PAGES */
  	position: relative;
  	width: 100%;
  	height: 100%;
- 	border: 1px solid red;
+ 	/*border: 1px solid red;*/
  }
 
 #moving-pages-content {
@@ -662,7 +987,7 @@ START OF CONTENT PAGES */
  ===================
  START OF COURS PAGES */
 
- .classes-div {
+ .tarifs-div {
  	position: absolute;
  	top: 0;
  	/*left: 1150px;*/
@@ -675,14 +1000,14 @@ START OF CONTENT PAGES */
  	overflow: hidden;
  }
 
-  .classes-div .container {
+  .tarifs-div .container {
   	background-color: #77DD77;
   	height: 100%;
   	width: 100%;
   	margin: 0 auto;
   }
 
-  #classes-h1 {
+  #tarifs-h1 {
   	position: absolute;                 /*removing this, YOU CANNOT RUN THE MARGIN-TOP  BELOW*/
   	font-size: 1px;
   	color: white;
