--- a/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
+++ b/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
@@ -271,10 +271,10 @@ html body {
 	background-size: cover;
 	text-align: center; 		/*NECESSARY TO SET CHILD ELEMENTS CENTERED*/
 	width: auto;
-	min-height: 55em; 
+	/*min-height: 55em; */
 	/*max-height: 95vh;*/
 	min-width: 1280px;
-	height: 100vh;
+	min-height: 100vh;
 	}
 
 .hero {
@@ -349,8 +349,7 @@ html body {
     /* opacity: 0.9; */
     position: absolute;				/*UNDER THE VIDEO-BG DIV - THIS ALLOWS US TO KEEP IT SIZED NORMALLY DURING RESIZING*/
     z-index: -9;
-
-	}	
+}	
 
 /*END TEST*/
 
@@ -496,11 +495,17 @@ html body {
 /* END MAIN BLOCK(S) CODE
 ===================
 START OF CONTENT PAGES */
+#test-button {
+	position: absolute;
+    top: 16px;
+    left: 38em;
+}
 
 .moving-pages {
 	display: block;
 	overflow: hidden;
-	height: 65em;
+	min-height: 13em;
+	height: 100%
 
 }
 
@@ -513,13 +518,11 @@ START OF CONTENT PAGES */
 	position: absolute;
 	opacity: 1;
 	top: 0;
-	
 	/* Trying below width to disable display:none*/
 	width: 0.8em;
 	opacity: 0;
 	height: 64px;
 	padding: 0 0 0 0;
-	
 	overflow: hidden;
 	background-color: lightgrey;
 	margin-bottom: -30px;
@@ -594,7 +597,7 @@ START OF CONTENT PAGES */
   position: relative;
   width: 100%;
   max-height: 100%;
-  margin-top: 9em;
+  /*margin-top: 3em !important;*/
   overflow: hidden;
 }
 .carousel-inner > .item {
@@ -603,6 +606,7 @@ START OF CONTENT PAGES */
   -webkit-transition: .6s ease-in-out left;
        -o-transition: .6s ease-in-out left;
           transition: .6s ease-in-out left;
+  margin-top: 3em !important;        
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
@@ -773,23 +777,33 @@ START OF CONTENT PAGES */
 }
 .carousel-caption {
   font-family: 'Amatic SC';
-  background-color: rgb(140, 81, 177);
-  opacity: 0.439;
+  background-color: rgba(140, 81, 177, 0.439);
   position: absolute;
-  left: 48px;
-  top: 139px;
-  width: 203px;    
-  height: 101px;
+  left: 5.7em;
+  top: 0em;
+  width: 203px;
+  height: 7%;
+  font-size: 0.001em; /*should be 1.4em*/
 }
 
 .carousel-caption2{
-
+	font-family: 'Amatic SC';
+    background-color: rgba(140, 81, 177, 0.439);
+    position: relative;
+    width: 13em;
+    overflow: auto;
+    float: right;
+    clear: both;
+    margin-top: -59%;
+    margin-right: 1.2em;
+    color: rgba(255,255,255,1);
+    font-size: 0.0001em; /*should be 3em*/
 }
 
 .carousel-caption .btn {
   text-shadow: none;
 }
-@media screen and (min-width: 768px) {
+/*@media screen and (min-width: 768px) {
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
@@ -815,24 +829,25 @@ START OF CONTENT PAGES */
   .carousel-indicators {
     bottom: 20px;
   }
-}
+}*/
 
  .carousel-inner img {
      -webkit-filter: grayscale(90%);
      filter: grayscale(90%); /* make all photos black and white */ 
      width: 100%; /* Set width to 100% */
      margin: auto;
+     margin-top: 0em;
      /*margin-top: 55px;*/
   }
 
- .carousel-caption {
+ /*.carousel-caption {
  	color: white;
  	font-size: 1.4em;
- }
+ }*/
 
  .carousel-caption h3 {
-     color: white !important;
-     font-size: 0.8em;
+     color: rgba(255,255,255,1) !important;
+     font-size: 1.8em;
  }
 
  .carousel-indicators li {
@@ -848,6 +863,8 @@ START OF CONTENT PAGES */
          display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
      }
  }
+
+
 /*Carousel END*/
 
 
@@ -939,7 +956,7 @@ START OF CONTENT PAGES */
     
 	}
 
-.mp-img, .mp-header, .mp-text {	/*to set the images outside of the screen when jQuering them in*/
+.mp-img, .mp-header, .mp-text, .carousel-caption, .carousel-caption2 {	/*to set the images outside of the screen when jQuering them in*/
 	opacity: 0;
 	left: -100em;
 }
