--- a/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
+++ b/csstestVERSIONWITHVIDEOBACKGROUND_____TESTING_WITH_NEW_HEADER___1-PAGE CSS.css
@@ -1190,18 +1190,12 @@ html body {
 /* END MAIN BLOCK(S) CODE
 ===================
 START OF CONTENT PAGES */
-#test-button {
-	position: absolute;
-    top: 16px;
-    left: 38em;
-}
 
 .moving-pages {
 	display: block;
 	overflow: hidden;
 	min-height: 13em;
 	height: 100%
-
 }
 
 #a-propos, #tarifs, #blog, #btn-blue {
@@ -1221,6 +1215,7 @@ START OF CONTENT PAGES */
 	overflow: hidden;
 	background-color: lightgrey;
 	margin-bottom: -30px;
+  box-shadow: 0 0 55px rgba(140, 81, 177, 0.639);
 }
 
 .btn-blue-div .container {
@@ -1473,7 +1468,7 @@ START OF CONTENT PAGES */
 }
 
 .carousel-caption2 h3 {
-  margin-top: 10px;
+  margin-top: 1vh;
 }
 
 .carousel-caption {
@@ -1482,7 +1477,8 @@ START OF CONTENT PAGES */
   position: absolute;
   left: 5.7em;
   top: 0em;
-  width: 203px;
+  min-width: 20vw;
+  max-width: 20vw;
   height: 7%;
   font-size: 2.4em; /*should be 1.4em*/
   font-weight: 900;
@@ -1500,31 +1496,38 @@ START OF CONTENT PAGES */
 }
 
 .carousel-caption2 {
-	font-family: 'Amatic SC';
+	  font-family: 'Amatic SC';
     background-color: rgba(140, 81, 177, 0.439);
-    /*background-color: rgba(0,0,0,0.439);*/
     position: absolute;
     width: 13em;
     overflow: auto;
-    /*float: right;
-    clear: both;
-    margin-top: -59%;*/
     margin-right: 1.2em;
     color: rgba(255,255,255,1);
     font-size: 0.0001em; /*should be 3em*/
+
     /*setting transiton times for when hovered below*/
     -webkit-transition: background-color 0.7s ease-in-out;
     -moz-transition: background-color 0.7s ease-in-out;
     -o-transition: background-color 0.7s ease-in-out;
     transition: background-color 0.7s ease-in-out;
 }
+.cc-intro {
+  font-size: 95%;
+  margin-top: 0.2em;
+  padding: 0 0.2em;
+  text-shadow: 0 0 20px white;
+}
 
 .carousel-caption2 ul {
   list-style: square;
-  margin-left: 50px;
+  margin-left: 0.7em;
   text-align: left;
   padding: 20px;
-  line-height: 56px;
+  line-height: 1em;
+}
+
+.carousel-caption2 li {
+  margin-top: 0.3em;
 }
 
 .toblur{
@@ -1565,7 +1568,7 @@ START OF CONTENT PAGES */
 }
 
 .carousel-caption2:hover .cc-title {
-  text-shadow: 0px 0px 20px violet;
+  text-shadow: 0px 0px 30px violet;
   
 }
 
@@ -1574,15 +1577,10 @@ START OF CONTENT PAGES */
   background-color: rgba(0,0,0,0.439);
 }
 
-#stick-figure-core {
-  width: 210px;
-}
-
-
-
 .carousel-caption .btn {
   text-shadow: none;
 }
+
 /*@media screen and (min-width: 768px) {
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .glyphicon-chevron-right,
@@ -1684,7 +1682,6 @@ START OF CONTENT PAGES */
  	width: 850px;
  	opacity: 0;
  	text-align: left;
- 	
  }
 
 #moving-pages-content {
